Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 2.10.0
-
None
-
ghx-label-8
Description
Steps to reproduce:
- Start Impala with the following flag: -enable_partitioned_aggregation=false
- Run the following query:
select count(*) from tpch_parquet.lineitem
Impala hits a DCHECK:
aggregation-node.cc:669] Check failed: false bad aggregate operator: 6
Attachments
Issue Links
- is broken by
-
IMPALA-5036 Improve COUNT(*) performance of Parquet scans.
- Resolved